--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@
       <div class="subsectionheading">Changes to Julia</div>
       <p>The first printing of the book took place when Julia was at version 0.4.0. Recent language changes have been quite significant.</p>
       <ul>
-      <li><b>Pages 103-109</b>. There have been changes to the type hierarachy. The types <code>ASCIIString</code> and <code>UTF8String</code> have been removed. Array slicing of rows now produces vectors. The supertype of <code>Set{T}</code> has changed. The function <code>super</code> is now <code>supertype</code>. Functions now have special types. <a href="resources/book-replacement-pages/juliaupdates.pdf">Download replacement pages for the book</a>.
-      <li><b>Page 114</b>. RemoteRefs are now called Futures, and factoring is now part of a package, breaking the two scripts on the page. A REPLACEMENT PAGE IS IN THE WORKS.
+      <li><b>Pages 103-109</b>. There have been changes to the type hierarachy. The types <code>ASCIIString</code> and <code>UTF8String</code> have been removed. Array slicing of rows now produces vectors. The supertype of <code>Set{T}</code> has changed. The function <code>super</code> is now <code>supertype</code>. Functions now have special types. <a href="resources/book-replacement-pages/julia-type-updates.pdf">Download replacement pages for the book</a>.
+      <li><b>Page 114</b>. RemoteRefs are now called Futures, and factoring is now part of a package, breaking the two scripts on the page. <a href="resources/book-replacement-pages/julia-remote-updates.pdf">Download the replacement page</a>.
       </ul>
 
       <div class="sectionheading">Errata</div>
