--- a/js/browser_event_demo.html
+++ b/js/browser_event_demo.html
@@ -1,1 +1,20 @@
-<script src="browser_event_demo.js"></script>
+<canvas width="500" height="500"></canvas>
+<script type="module">
+  const canvas = document.querySelector("canvas")
+  const ctx = canvas.getContext("2d")
+  let drawing = false
+  canvas.style.border = "2px solid purple"
+  canvas.addEventListener("mousedown", e => {
+    drawing = true
+    ctx.moveTo(e.clientX, e.clientY)
+  })
+  canvas.addEventListener("mousemove", e => {
+    if (drawing) {
+      ctx.lineTo(e.clientX, e.clientY)
+      ctx.stroke()
+    }
+  })
+  const stopDrawing = e => (drawing = false)
+  canvas.addEventListener("mouseup", stopDrawing)
+  canvas.addEventListener("mouseout", stopDrawing)
+</script>
